--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.3",
+    "@clerk/nextjs": "^6.12.9",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -33,7 +33,7 @@
     "lucide-react": "^0.462.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
-    "next": "14.0.3",
+    "next": "^15.2.3",
     "next-themes": "^0.4.3",
     "npm-check-updates": "^16.14.12",
     "openai": "^4.24.2",
@@ -60,5 +60,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
